--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="sidebars.css" th:href="@{/css/home/sidebars.css}" rel="stylesheet">
@@ -204,7 +205,7 @@
                         <div class="row justify-content-center">
                             <div class="col-md-10 text-center">
                                 <input type="text" class="form-control w-25 mx-auto mb-3" id="result"
-                                    placeholder="Select date" style="display: none;">
+                                    placeholder="Select date" th:value="${today}" style="display: none;" >
                                 <form action="#" class="row">
                                     <div class="col-md-12">
                                         <div id="inline_cal"></div>
@@ -216,21 +217,20 @@
                 </div>
             </div>
             <div>
-                <div
-                    class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
-                    <span class="fs-5 fw-semibold">TO-DO</span>
-                    <button id="addButton" style="background: none; border: none; cursor: pointer; padding: 0;">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                            class="bi bi-plus-square" viewBox="0 0 16 16">
-                            <path
-                                d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z" />
-                            <path
-                                d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4" />
-                        </svg>
-                    </button>
+                <div class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom" style="justify-content: space-between;">
+                        <span class="fs-5 fw-semibold">TO-DO</span>
+                        <button id="addButton" style="background: none; border: none; cursor: pointer; padding: 0;">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                                 class="bi bi-plus-square" viewBox="0 0 16 16">
+                                <path
+                                        d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z" />
+                                <path
+                                        d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4" />
+                            </svg>
+                        </button>
 
-                    <!-- 모달 -->
-                    <div id="myModal"
+                    <!-- 추가 모달 -->
+                    <div id="todoModal"
                         style="display: none; position: fixed; z-index: 1; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.5);">
                         <div
                             style="background-color: #fff; margin: auto; padding: 20px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.2); width: 400px; height: 400px;">
@@ -249,17 +249,25 @@
                 </div>
                 <table class="table">
                     <tbody>
-                        <tr th:if="${todoList == null || #lists.isEmpty(todoList)}"> <!-- 리스트가 비어있을 경우 -->
-                            <td>목록이 없습니다.</td>
-                        </tr>
-
-                        <tr th:each="todo : ${todoList}"> <!-- 리스트가 있을 경우 -->
-                            <td>
-                                <span th:text="${todo.content}"></span>
-                            </td>
-                        </tr>
+                        <!-- list 목록 -->
                     </tbody>
                 </table>
+                <!-- 수정 모달 -->
+                <div id="updateModal"
+                     style="display: none; position: fixed; z-index: 1; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.5);">
+                    <div
+                            style="background-color: #fff; margin: auto; padding: 20px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.2); width: 400px; height: 400px;">
+                        <h2 style="text-align: center;">할 일 수정</h2>
+                        <input type="text" id="updateInput" placeholder="할 일을 입력하세요"
+                               style="width: 90%; height: 90px; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 4px;">
+                        <div style="text-align: center;">
+                            <button id="updateButton"
+                                    style="background-color: #add8e6; color: white; border: none; padding: 6px 12px; border-radius: 4px; cursor: pointer; margin-right: 10px;">수정</button>
+                            <button id="updateCancelButton"
+                                    style="background-color: #f08080; color: white; border: none; padding: 6px 12px; border-radius: 4px; cursor: pointer;">취소</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
@@ -268,8 +276,8 @@
     <script src="https://preview.colorlib.com/theme/bootstrap/calendar-17/js/popper.min.js"></script>
     <script src="https://preview.colorlib.com/theme/bootstrap/calendar-17/js/bootstrap.min.js"></script>
     <script src="https://preview.colorlib.com/theme/bootstrap/calendar-17/js/rome.js"></script>
-    <script src="../static/js/home/main.js" th:src="@{/js/home/main.js}"></script>
-    <script src="../static/js/home/modal.js" th:src="@{/js/home/modal.js}"></script>
+    <script type="module" src="../static/js/home/main.js" th:src="@{/js/home/main.js}"></script>
+    <script type="module" src="../static/js/home/modal.js" th:src="@{/js/home/modal.js}"></script>
     <script defer
         src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015"
         integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ=="
