--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -236,14 +236,14 @@
             </a>
 
             <!-- 채팅 내용 박스 -->
-            <div class="chat-box" style="width: 830px; height: 550px; overflow-y: auto; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
+            <div class="chat-box" >
 
             </div>
 
             <!-- 입력 박스 -->
             <div class="chat-input mt-3" style="width: 830px;">
                 <div class="input-container">
-                    <input type="text" class="form-control" placeholder="메시지를 입력하세요..." aria-label="메시지 입력" id="messageInput">
+                    <textarea id="messageInput" class="form-control" rows="2" placeholder="메시지를 입력하세요..." aria-label="메시지 입력" style="resize: none;"></textarea>
                     <button type="button" id="sendButton" class="send-button">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send" viewBox="0 0 16 16">
                             <path d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576zm6.787-8.201L1.591 6.602l4.339 2.76z"/>
@@ -251,6 +251,7 @@
                     </button>
                 </div>
             </div>
+
 
 
         </div>
