--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,6 +31,7 @@
             </div>
             <button class="btn btn-primary w-100 py-2" type="submit">로그인</button>
         </form>
+        <button class="btn btn-primary w-100 py-2" th:onclick="'location.href=\'/join\''">회원가입</button>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
