--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -82,25 +82,35 @@
         <div class="b-example-divider b-example-vr"></div>
 
         <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px; height: 100vh;">
-            <div class="dropdown">
+            <div class="d-flex justify-content-between align-items-center">
                 <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
-                    data-bs-toggle="dropdown" aria-expanded="false">
+                   data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
                     <p id="userId" th:text="${userDTO.id}" style="display:none;"></p>
                     <strong id="userNickName" th:text="${userDTO.nickName}"></strong>
                 </a>
-                <ul class="dropdown-menu text-small shadow">
-                    <li><a class="dropdown-item" href="#">New project...</a></li>
-                    <li><a class="dropdown-item" href="#">Settings</a></li>
-                    <li><a class="dropdown-item" href="#">Profile</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
-                </ul>
+
+                <a href="/logout" class="d-flex align-items-center link-body-emphasis text-decoration-none">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="16" fill="currentColor" class="bi bi-box-arrow-right ms-2" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z"/>
+                        <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
+                    </svg>
+                </a>
+
             </div>
 
+            <ul class="dropdown-menu text-small shadow mt-2">
+                <li><a class="dropdown-item" href="#">New project...</a></li>
+                <li><a class="dropdown-item" href="#">Settings</a></li>
+                <li><a class="dropdown-item" href="#">Profile</a></li>
+                <li>
+                    <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Sign out</a></li>
+            </ul>
+
             <hr>
+
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item">
                     <a href="#" class="nav-link active" aria-current="page">
@@ -110,42 +120,42 @@
                         Home
                     </a>
                 </li>
-                <li>
-                    <a href="#" class="nav-link link-body-emphasis">
-                        <svg class="bi pe-none me-2" width="16" height="16">
-                            <use xlink:href="#speedometer2" />
-                        </svg>
-                        Dashboard
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link link-body-emphasis">
-                        <svg class="bi pe-none me-2" width="16" height="16">
-                            <use xlink:href="#table" />
-                        </svg>
-                        Orders
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link link-body-emphasis">
-                        <svg class="bi pe-none me-2" width="16" height="16">
-                            <use xlink:href="#grid" />
-                        </svg>
-                        Products
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link link-body-emphasis">
-                        <svg class="bi pe-none me-2" width="16" height="16">
-                            <use xlink:href="#people-circle" />
-                        </svg>
-                        Customers
-                    </a>
-                </li>
+<!--                <li>-->
+<!--                    <a href="#" class="nav-link link-body-emphasis">-->
+<!--                        <svg class="bi pe-none me-2" width="16" height="16">-->
+<!--                            <use xlink:href="#speedometer2" />-->
+<!--                        </svg>-->
+<!--                        Dashboard-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a href="#" class="nav-link link-body-emphasis">-->
+<!--                        <svg class="bi pe-none me-2" width="16" height="16">-->
+<!--                            <use xlink:href="#table" />-->
+<!--                        </svg>-->
+<!--                        Orders-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a href="#" class="nav-link link-body-emphasis">-->
+<!--                        <svg class="bi pe-none me-2" width="16" height="16">-->
+<!--                            <use xlink:href="#grid" />-->
+<!--                        </svg>-->
+<!--                        Products-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a href="#" class="nav-link link-body-emphasis">-->
+<!--                        <svg class="bi pe-none me-2" width="16" height="16">-->
+<!--                            <use xlink:href="#people-circle" />-->
+<!--                        </svg>-->
+<!--                        Customers-->
+<!--                    </a>-->
+<!--                </li>-->
             </ul>
             <hr>
-
         </div>
+
 
         <div class="b-example-divider b-example-vr"></div>
 
