JWT FILTER 검증 URI 오류 ìTODO 초기 날짜 오류 수정

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -69,7 +69,7 @@
                     <label for="password2">비밀번호 확인</label>
                     <input type="password" class="form-control" id="password2" name="checkPassword" placeholder="위와 동일하게 입력해주세요" required>
                     <div class="invalid-feedback">비밀번호를 입력해주세요.</div>
-                    <div class="message" id="password-message">비밀번호 확인 완료</div>
+                    <div class="message" id="password-message"></div>
                 </div>
 
                 <div class="mb-3">
