--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>로그인</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="sign-in.css" th:href="@{/css/login/sign-in.css}" rel="stylesheet">
+    <link th:href="@{/css/login/sign-in.css}" rel="stylesheet">
 </head>
 <body>
 <main class="form-signin w-100 m-auto">
